# snt-minsite-analyzer

./: pyproject.toml
src/: analyzer.py  css.py  debug.py  fs.py  gdrive.py  main.py  minisites.py  spreadsheet.py
